Decompose userbot and move to pyrogram fork

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ aiogram==2.25.1
 wheel
 pydantic
 pydantic-settings
-Pyrogram
+kurigram
 TgCrypto
 youtube-dl @ git+https://github.com/ytdl-org/ytdl-nightly.git
